# image-processing

./: README.md
Image/: CMakeLists.txt
Image/src/: Image.cpp  Image.h  main.cpp
binarize/: gray2bw.cpp
dither/FS/: CMakeLists.txt  floyds.cpp
dither/FS/includes/: image.h
dither/FS/src/: floyd_steinberg.cpp
grey/: rgb2gray.cpp
